--- a/CodeSnippets/CodeSnippets/App.config
+++ b/CodeSnippets/CodeSnippets/App.config
@@ -9,7 +9,7 @@
     <add key="FolderPath" value="C:\Users\lakshay.sharma\Downloads\"/>
   </appSettings>
   <connectionStrings>
-    <add name="DBConnection" connectionString="Data Source=(LocalDB)\v11.0;Initial Catalog=WingtipToys;Integrated Security=True;Pooling=False"/>
-    <add name="DBDapperConnection" providerName="System.Data.ProviderName" connectionString="Valid Connection String;" />
+    <add name="DBConnection" connectionString="Data Source=(LocalDB)\v11.0;Initial Catalog=WingtipToys;Integrated Security=True;Pooling=False;Password=myPassword"/>
+    <add name="DBDapperConnection" providerName="System.Data.ProviderName" connectionString="Valid Connection String;Password=myPassword"/>
   </connectionStrings>
 </configuration>
