Adde 70-487 Code Examples

--- a/CodeSnippets/WcfServiceLibrary/App.config
+++ b/CodeSnippets/WcfServiceLibrary/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-
+  <!--You can use Tools ->  WCF Service Configuration Editor to modify this file. -->
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
@@ -82,6 +82,31 @@
         <!-- This endpoint does not use a secure binding and should be secured or removed before deployment -->
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
       </service>
+    
+       <service name="WcfServiceLibrary.SchoolService">
+        <host>
+          <baseAddresses>
+            <add baseAddress = "http://localhost:8733/Design_Time_Addresses/WcfServiceLibrary/SchoolService/" />
+          </baseAddresses>
+        </host>
+        <!-- Service Endpoints -->
+        <!-- Unless fully qualified, address is relative to base address supplied above -->
+        <!--endpoint address="" binding="basicHttpBinding" contract="WcfServiceLibrary.ISchoolService"-->
+        <endpoint address="" binding="wsHttpBinding" contract="WcfServiceLibrary.ISchoolService">
+          <!-- 
+              Upon deployment, the following identity element should be removed or replaced to reflect the 
+              identity under which the deployed service runs.  If removed, WCF will infer an appropriate identity 
+              automatically.
+          -->
+          <identity>
+            <dns value="localhost"/>
+          </identity>
+        </endpoint>
+        <!-- Metadata Endpoints -->
+        <!-- The Metadata Exchange endpoint is used by the service to describe itself to clients. -->
+        <!-- This endpoint does not use a secure binding and should be secured or removed before deployment -->
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+      </service>   
     
     </services>
     <behaviors>
