--- a/CodeSnippets/WcfServiceLibrary/WcfServiceLibrary.csproj
+++ b/CodeSnippets/WcfServiceLibrary/WcfServiceLibrary.csproj
@@ -44,13 +44,18 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnswerDetails.cs" />
+    <Compile Include="AnswerSet.cs" />
     <Compile Include="CalcService.cs" />
     <Compile Include="ICalcService.cs" />
     <Compile Include="ISaleService.cs" />
+    <Compile Include="ISchoolService.cs" />
     <Compile Include="IService1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SaleService.cs" />
+    <Compile Include="SchoolService.cs" />
     <Compile Include="Service1.cs" />
+    <Compile Include="TestQuestion.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
